fixes shop h2 spacing

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -568,10 +568,6 @@ section#splash {
   position: relative;
 }
 
-#products-title {
-  margin-bottom: 0.2em;
-}
-
 .product {
   display: inline-block;
   width: $product-thumb-size;
